--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
 		"jquery": "latest",
 		"requirejs": "latest",
 		"requirejs-text": "latest",
-		"backbone": "latest"
+		"backbone": "latest",
+		"bootstrap": "latest"
 	}
 }
