--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"bower": "latest",
 		"grunt": "latest",
 		"grunt-contrib-copy": "latest",
+		"grunt-contrib-less": "latest",
 		"grunt-contrib-watch": "latest",
 		"grunt-contrib-requirejs": "latest",
 		"grunt-contrib-jshint": "latest",
